--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "numpy>=2.0.0",
     "pandas>=2.2.2",
-    "ipdb>=0.13.13",
+    "pathlib>=1.0.1",
 ]
 
 [project.scripts]
