--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,11 +33,12 @@ dev-dependencies = [
 allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
-packages = ["06/src06","07/src07"]
+packages = ["06/src06","07/src07","08/src08"]
 
 [tool.hatch.build.source]
 "src06" = "06/src06"
 "src07" = "07/src07"
+"src08" = "08/src08"
 
 
 [tool.ruff]
