--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,12 +33,13 @@ dev-dependencies = [
 allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
-packages = ["06/src06","07/src07","08/src08"]
+packages = ["06/src06","07/src07","08/src08","09/src09"]
 
 [tool.hatch.build.source]
 "src06" = "06/src06"
 "src07" = "07/src07"
 "src08" = "08/src08"
+"src09" = "09/src09"
 
 
 [tool.ruff]
