--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ dev-dependencies = [
 allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
-packages = ["06/src06","07/src07","08/src08","10/src10"]
+packages = ["06/src06","07/src07","08/src08","10/src10","11/src11"]
 
 [tool.hatch.build.source]
 "src06" = "06/src06"
